[gd_scene load_steps=27 format=4 uid="uid://bchdxhibo8f0g"]

[ext_resource type="Script" uid="uid://bk218myvtqqan" path="res://levels/generation/templates/special/squid_fight/squid_fight_level.gd" id="1_hb6gp"]
[ext_resource type="TileSet" uid="uid://b7l7ni8f711eg" path="res://levels/generation/tiles.tres" id="1_i0yvx"]
[ext_resource type="PackedScene" uid="uid://cp6d8v6a3w12h" path="res://fish/squid/squid_boss.tscn" id="4_iioni"]
[ext_resource type="Script" uid="uid://drwl4kjkix38c" path="res://boss/squid/squid_boss.gd" id="4_mb7w1"]
[ext_resource type="Script" uid="uid://dc6vhyynq1mq8" path="res://characters/health.gd" id="4_oldw0"]
[ext_resource type="Script" uid="uid://5fp57vk4c4a3" path="res://characters/hitbox.gd" id="5_lh1f8"]
[ext_resource type="Script" uid="uid://oehys4qgdurh" path="res://boss/squid/tentacles.gd" id="6_lh1f8"]
[ext_resource type="Script" uid="uid://jfyby71sefyu" path="res://utilities/trigger_hurt.gd" id="7_ni1r6"]
[ext_resource type="PackedScene" uid="uid://cralgksc31h64" path="res://fish/squid/tentacle.tscn" id="7_oldw0"]
[ext_resource type="Script" uid="uid://djfpp2d3fbril" path="res://boss/boss_healthbar.gd" id="9_mb7w1"]
[ext_resource type="Texture2D" uid="uid://bsou74tb8aokn" path="res://ui/UI_slideri.png" id="9_sbyas"]
[ext_resource type="Texture2D" uid="uid://dw11lsbgl6ah2" path="res://boss/squid/bad_dragon_x_Frank.png" id="10_0rs68"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oldw0"]
size = Vector2(12, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lh1f8"]
size = Vector2(34.1255, 83.975)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rs68"]
size = Vector2(21, 140)

[sub_resource type="Animation" id="Animation_0rs68"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_ni1r6"]
resource_name = "idle"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -32), Vector2(0, 8), Vector2(0, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0rs68"]
_data = {
&"RESET": SubResource("Animation_0rs68"),
&"idle": SubResource("Animation_ni1r6")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_uufir"]
atlas = ExtResource("10_0rs68")
region = Rect2(0, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxy86"]
atlas = ExtResource("10_0rs68")
region = Rect2(50, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwey3"]
atlas = ExtResource("10_0rs68")
region = Rect2(100, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8vfx"]
atlas = ExtResource("10_0rs68")
region = Rect2(150, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqn8n"]
atlas = ExtResource("10_0rs68")
region = Rect2(150, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgmi5"]
atlas = ExtResource("10_0rs68")
region = Rect2(100, 0, 50, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu4u3"]
atlas = ExtResource("10_0rs68")
region = Rect2(50, 0, 50, 76)

[sub_resource type="SpriteFrames" id="SpriteFrames_mdr4q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uufir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxy86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwey3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8vfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqn8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgmi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu4u3")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="LevelPart" type="Node2D"]
script = ExtResource("1_hb6gp")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9//b/AAAEAAQAAAD+//b/AAAFAAQAAAD///b/AAAFAAQAAAAAAPb/AAAGAAQAAAABAPb/AAAGAAQAAAACAPb/AAAHAAQAAADx/wAAAAADAAYAAADy/wAAAAAEAAYAAADz/wAAAAAHAAYAAAD0/wAAAAAIAAYAAAALAAAAAAADAAYAAAAMAAAAAAAEAAYAAAANAAAAAAAHAAYAAAAOAAAAAAAIAAYAAADx//f/AAADAAYAAADy//f/AAAEAAYAAADz//f/AAAFAAYAAAD0//f/AAAGAAYAAAD1//f/AAAHAAYAAAD2//f/AAAIAAYAAAAJAPf/AAADAAYAAAAKAPf/AAAEAAYAAAALAPf/AAAFAAYAAAAMAPf/AAAGAAYAAAANAPf/AAAHAAYAAAAOAPf/AAAIAAYAAAACAPX/AAAHAAMAAAABAPX/AAAGAAMAAAAAAPX/AAAFAAMAAAD///X/AAAGAAMAAAD+//X/AAAGAAMAAAD9//X/AAAEAAMAAAAFAPz/AAADAAYAAAAGAPz/AAAEAAYAAAAHAPz/AAAHAAYAAAAIAPz/AAAIAAYAAAD4//z/AAAEAAYAAAD5//z/AAAHAAYAAAD6//z/AAAIAAYAAAD3//z/AAADAAYAAAA=")
tile_set = ExtResource("1_i0yvx")

[node name="SquidBoss" parent="." instance=ExtResource("4_iioni")]
position = Vector2(0, -32)
script = ExtResource("4_mb7w1")

[node name="Health" type="Node" parent="SquidBoss"]
script = ExtResource("4_oldw0")
max_health = 10000.0
metadata/_custom_type_script = "uid://dc6vhyynq1mq8"

[node name="HitboxFace" type="Area2D" parent="SquidBoss" node_paths=PackedStringArray("health")]
position = Vector2(0, 32)
collision_layer = 4
collision_mask = 0
script = ExtResource("5_lh1f8")
health = NodePath("../Health")
multiplier = 100
metadata/_custom_type_script = "uid://5fp57vk4c4a3"

[node name="Shape" type="CollisionShape2D" parent="SquidBoss/HitboxFace"]
position = Vector2(3, 8)
shape = SubResource("RectangleShape2D_oldw0")
debug_color = Color(0, 0.65, 0.140833, 0.54902)

[node name="Hitbox" type="Area2D" parent="SquidBoss" node_paths=PackedStringArray("health")]
position = Vector2(0, 32)
collision_layer = 4
collision_mask = 0
script = ExtResource("5_lh1f8")
health = NodePath("../Health")
multiplier = 25
metadata/_custom_type_script = "uid://5fp57vk4c4a3"

[node name="Shape" type="CollisionShape2D" parent="SquidBoss/Hitbox"]
position = Vector2(0.10798, -57.9217)
rotation = -0.0683107
shape = SubResource("RectangleShape2D_lh1f8")
debug_color = Color(0.579414, 0.551862, 0.0385749, 0.42)

[node name="TriggerHurt" type="Area2D" parent="SquidBoss"]
position = Vector2(2, -4)
collision_layer = 0
collision_mask = 2
script = ExtResource("7_ni1r6")
metadata/_custom_type_script = "uid://jfyby71sefyu"

[node name="Shape" type="CollisionShape2D" parent="SquidBoss/TriggerHurt"]
position = Vector2(-2.5, 8)
shape = SubResource("RectangleShape2D_0rs68")
debug_color = Color(0.996162, 0, 0.192015, 0.42)

[node name="AnimationPlayer2" type="AnimationPlayer" parent="SquidBoss"]
libraries = {
&"": SubResource("AnimationLibrary_0rs68")
}
autoplay = "idle"
speed_scale = 0.1

[node name="Tentacles" type="Node2D" parent="."]
script = ExtResource("6_lh1f8")

[node name="Tentacle" parent="Tentacles" instance=ExtResource("7_oldw0")]
position = Vector2(-208, 48)
rotation = -1.5708
is_vertical = true

[node name="Tentacle2" parent="Tentacles" instance=ExtResource("7_oldw0")]
position = Vector2(-96, 48)
rotation = -1.5708
is_vertical = true

[node name="Tentacle3" parent="Tentacles" instance=ExtResource("7_oldw0")]
position = Vector2(96, 48)
rotation = -1.5708
scale = Vector2(1, -1)
is_vertical = true

[node name="Segment1" parent="Tentacles/Tentacle3/Segments" index="0"]
position = Vector2(0, 1.33996)

[node name="Segment2" parent="Tentacles/Tentacle3/Segments" index="1"]
position = Vector2(32, 1.99983)

[node name="Segment3" parent="Tentacles/Tentacle3/Segments" index="2"]
position = Vector2(64, 1.37836)

[node name="Segment4" parent="Tentacles/Tentacle3/Segments" index="3"]
position = Vector2(96, -0.126264)

[node name="Segment5" parent="Tentacles/Tentacle3/Segments" index="4"]
position = Vector2(128, -1.54999)

[node name="Segment6" parent="Tentacles/Tentacle3/Segments" index="5"]
position = Vector2(160, -1.98059)

[node name="Segment7" parent="Tentacles/Tentacle3/Segments" index="6"]
position = Vector2(192, -1.14218)

[node name="Segment8" parent="Tentacles/Tentacle3/Segments" index="7"]
position = Vector2(224, 0.428061)

[node name="Segment9" parent="Tentacles/Tentacle3/Segments" index="8"]
position = Vector2(256, 1.72403)

[node name="Segment10" parent="Tentacles/Tentacle3/Segments" index="9"]
position = Vector2(288, 1.91536)

[node name="Segment11" parent="Tentacles/Tentacle3/Segments" index="10"]
position = Vector2(320, 0.879473)

[node name="Segment12" parent="Tentacles/Tentacle3/Segments" index="11"]
position = Vector2(352, -0.719918)

[node name="Segment13" parent="Tentacles/Tentacle3/Segments" index="12"]
position = Vector2(384, -1.85804)

[node name="Segment14" parent="Tentacles/Tentacle3/Segments" index="13"]
position = Vector2(416, -1.80566)

[node name="Segment15" parent="Tentacles/Tentacle3/Segments" index="14"]
position = Vector2(448, -0.59635)

[node name="Segment16" parent="Tentacles/Tentacle3/Segments" index="15"]
position = Vector2(480, 0.99506)

[node name="TotallyNotAdultToy" parent="Tentacles/Tentacle3/Segments" index="16"]
position = Vector2(512, 1.94891)
sprite_frames = SubResource("SpriteFrames_mdr4q")
frame_progress = 0.866996
offset = Vector2(-4, -38)

[node name="Tentacle4" parent="Tentacles" instance=ExtResource("7_oldw0")]
position = Vector2(208, 48)
rotation = -1.5708
scale = Vector2(1, -1)
is_vertical = true

[node name="Tentacle5" parent="Tentacles" instance=ExtResource("7_oldw0")]
position = Vector2(288, -16)
rotation = 3.14159
scale = Vector2(1, -1)

[node name="Tentacle6" parent="Tentacles" instance=ExtResource("7_oldw0")]
position = Vector2(-304, -56)

[node name="Tentacle7" parent="Tentacles" instance=ExtResource("7_oldw0")]
position = Vector2(288, -160)
rotation = 3.14159
scale = Vector2(1, -1)

[node name="Tentacle8" parent="Tentacles" instance=ExtResource("7_oldw0")]
position = Vector2(-304, -200)

[node name="HAttackTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="VAttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="BossHealthbar" type="CanvasLayer" parent="." node_paths=PackedStringArray("boss")]
layer = 8
script = ExtResource("9_mb7w1")
health_percentage = 1.0
boss = NodePath("../SquidBoss/Health")

[node name="Control" type="Control" parent="BossHealthbar"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Healthbar" type="TextureRect" parent="BossHealthbar/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 12.0
offset_right = 128.0
offset_bottom = 52.0
grow_horizontal = 2
texture = ExtResource("9_sbyas")

[node name="Progress" type="ColorRect" parent="BossHealthbar/Control"]
layout_mode = 0
offset_left = -100.0
offset_top = 26.0
offset_right = 138.0
offset_bottom = 40.0
color = Color(0.62, 0.124, 0.124, 1)

[connection signal="Die" from="SquidBoss/Health" to="SquidBoss" method="_on_health_die"]
[connection signal="hurt_at" from="SquidBoss/Health" to="SquidBoss" method="_on_health_hurt_at"]
[connection signal="timeout" from="HAttackTimer" to="." method="_on_h_attack_timer_timeout"]
[connection signal="timeout" from="VAttackTimer" to="." method="_on_v_attack_timer_timeout"]

[editable path="Tentacles/Tentacle3"]
